# nrd-sys

./: Cargo.toml  build.rs  output.txt
Include/: NRD.h  NRDDescs.h  NRDSettings.h
examples/: example.rs  export_spirv_for_embed.rs  spirv_to_msl.rs
src/: embed_msl.rs  ffi.rs  lib.rs
src/api/: instance.rs  mod.rs
