[package]
name = "nrd-sys"
version = "0.2.0"
edition = "2021"
description = "Rust FFI for NVIDIA Realtime Denoiser"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["game", "denoiser", "gamedev", "graphics", "vulkan"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dust-engine/nrd-sys"

[dependencies]
allocator-api2 = "0.3.0"

[build-dependencies]
bindgen = "0.72.0"
